--- a/src/app/components/product-type/product-type.component.html
+++ b/src/app/components/product-type/product-type.component.html
@@ -8,7 +8,7 @@
         {{panelOpenState ? 'close' : 'open'}}
       </mat-panel-description>
     </mat-expansion-panel-header>
-    <mat-card *ngIf="typeMaxAmount != null" class="max-amount" [ngClass]="{'sub-type-max-amount' : subType}">
+    <mat-card *ngIf="subType" class="max-amount" [ngClass]="{'sub-type-max-amount' : subType}">
       {{'You are allowed ' + typeMaxAmount + ' items from the below products.'}}
       <br>
       {{typeTracker.typeAmountInCart === 0 ? 'None in Cart':
@@ -19,7 +19,7 @@
     </mat-card>
     <ng-container *ngFor="let productType of productTypes">
       <ng-container *ngIf="productType.productName">
-        <app-product (addOneTypeAmount)="updateTypeAmount($event)" [atTypeMaxAmount]="typeTracker.atTypeMaxAmount" 
+        <app-product (addOneTypeAmount)="updateTypeAmount($event)" [atTypeMaxAmount]="atTypeMaxAmount" 
         [family]="family" [product]="productType" [superType]="superType" [type]="type">
         </app-product>
       </ng-container>
