--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -1,13 +1,12 @@
 #flex-grid {
     margin: 5%;
-    margin-top: 7%;
     margin-bottom: 0;
     display: flex;
     justify-content: space-between;
 }
 .button-container {
     background: #46a8d0;
-    border: solid black 1px;
+    background-image: url("../../../assets/images/wavecut.png");    border: solid black 1px;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
@@ -32,6 +31,7 @@
 }
 #overview {
     background: #46a8d0;
+    background-image: url("../../../assets/images/wavecut.png");
     border: solid black 1px;
     border-radius: 10px;
     min-width: 700px;
@@ -59,7 +59,7 @@
     cursor: pointer;
 }  
 #empty-cart {
-    background: rgba(167,30,42,.8);
+    background: #A71E2A;
     border: solid black .5px;
     border-radius: 10px;
     display: flex;
@@ -81,7 +81,8 @@
     color: white;
 }
 .items-toolbar {
-    background-color: rgb(43, 126, 235);;
+    background-color: #065777;
+    border: solid black 1px;
     height: 50%;
     margin-left: 5%;
     width: 90%;
@@ -90,22 +91,27 @@
     margin-top: 2.5%;
 }
 .bottom-table {
+    border-top: none;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     height: 1rem;
     margin-bottom: 2.5%;
 }
 .mat-table {
-    background: rgb(12, 36, 100);
+    background: #46a8d0;
+    margin-left: 5%;
+    color: black;
     width: 90%;
-    margin-left: 5%
 }
-tr.mat-footer-row {
+th {
     font-weight: bold;
 }
-#end-order {
-    background: rgba(167,30,42,.3);
-    box-shadow: 0px 10px 10px rgb(0, 0, 0, .3);
-    text-align: center;
-    margin-bottom: 2%;
+th, td {
+    color: black;
+}
+th.mat-header-cell {
+    border-bottom-color: black;
+}
+td.mat-cell {
+    border-bottom-color: black;
 }
