--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -84,13 +84,13 @@
       </mat-panel-description>
     </mat-expansion-panel-header>
     <mat-card id="empty-cart" *ngIf="!cart.length">
-        Cart is empty!<br><br>
+        Your cart is empty!<br><br>
         To place an order, please press the "Back to Shop" button and add items.
     </mat-card>
     <ng-container *ngIf="cart.length">
       <ng-container *ngFor="let type of cart">
           <mat-toolbar class="items-toolbar top-table">{{type.typeName}}</mat-toolbar>
-          <table mat-table [dataSource]="type.items">
+          <table mat-table [dataSource]="type.products">
             <ng-container matColumnDef="column1">
               <th mat-header-cell *matHeaderCellDef>Name</th>
               <td mat-cell *matCellDef="let element">{{element.productName}}</td>
@@ -104,7 +104,6 @@
           </table>
           <div class="items-toolbar bottom-table"></div>
       </ng-container>
-      <mat-card id="end-order">Cart End</mat-card>  
     </ng-container>
     <mat-action-row (click)="cartPanelOpenState = false"></mat-action-row>  
     </mat-expansion-panel>
