--- a/src/app/components/family/family.component.css
+++ b/src/app/components/family/family.component.css
@@ -1,35 +1,21 @@
 .flex-grid {
-    /* margin: 5%; */
-    margin-top: 6%;
+    margin-top: 5%;
     display: flex;
     justify-content: space-evenly;
-}
-.mat-toolbar {
-    /* background: #065777; */
-    background: #603a17;
-    border: solid black 1px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    border-bottom: solid black .5px;
-    justify-content: center;
-    color: white;
 }
 .mat-card {
     border: solid black 1px;
     border-radius: 5px;
-    /* border-top-left-radius: 0px;
-    border-top-right-radius: 0px; */
     border-top: none;
 }
-#intro-card {
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
+#family-form {
+    background-color: #065777;
+    background-image: url("https://www.transparenttextures.com/patterns/wavecut.png");
+    border: solid black 1px;
 }
-#family-form .mat-card {
-    /* background: #46a8d0; */
-    background: #a2d16e;
-    /* background: #90643f; */
-    color: black
+.mat-stepper-horizontal{
+    background-color:  #46a8d0;
+    color: black;
 }
 .mat-raised-button {
     background-color: #F6D936;
@@ -41,6 +27,7 @@
     display: flex;
     justify-content: space-between;
     margin-top: 3%;
+    margin-bottom: 0%;
 }
 .mat-error {
     color: black;
