--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,25 +1,45 @@
-#grid-container {
+.mat-fab {
+    background-color: #A71E2A;
+    color: white;
+    font-weight: bold;
+    position: fixed;
+    margin-top: -12rem;
+    margin-left: 12rem;
+    z-index: 2;
+    transform: rotate(10deg);
+    display: block;
+    height: 7rem;
+    width: 7rem;
+}
+.center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#top-container {
     margin-top: 7%;
     display: flex;
     justify-content: space-around;
 }
 img {
+    border: solid black 1px;
     border-radius: 10px;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 .mat-toolbar {
-    background: orange;
+    background-color:  #065777;
     border: solid black 1px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    color: black;
     justify-content: center;
+    width: 100%;
 }
-.mat-card {
+#card-container {
     background: #603A17;
-    /* min-width: 700px;  */
+    background-image: url("../../../assets/images/wavecut.png");    
+    border: solid black 1px;
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: auto;
@@ -27,20 +47,35 @@ img {
 }
 #message-button-container {
     margin-left: 10%;
-    justify-items: center;
+    margin-right: 10%;
+    width: 20rem;
+}
+#message-button-middle {
+    width: 100%;
 }
 #message-button-container .mat-card {
-    background: #71A040;
+    background-color:  #46a8d0;
+    background-image: url("../../../assets/images/wavecut.png");  
     border: solid black 1px;
     border-top: 0;
     border-top-right-radius: 0;
     border-top-left-radius: 0;
     display: grid;
     grid-template-columns: auto;
+    row-gap: 1rem;
+    white-space: nowrap;
 }
 button {
     background-color: #F6D936;
     border: solid black .5px;
     color: black;
     margin: 0;
+    width: auto;
+}
+#cookie-message {
+    margin-top: 2%;
+}
+#cookie-message .mat-card {
+    background-color: rgba(177, 177, 177, 0.6);
+    color: rgb(65, 63, 63);
 }
