--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,11 @@
-<mat-toolbar>
-  <img src="../../../assets/images/bsfp-logo-navbar.png" alt="bsfp-logo-navbar">
+<mat-toolbar id="header">
+  <!-- <img src="../../../assets/images/bsfp-logo-navbar.png" alt="bsfp-logo-navbar"> -->
+  <h2>Broad Street Food Pantry Online</h2>
   <span></span>
   <button mat-raised-button (click)="openQuestionsModal()">{{buttonContent}}</button> 
   <button mat-raised-button (click)="onLogOutClick()" *ngIf="authService.loggedIn">Log Out</button>
+</mat-toolbar>
+<mat-toolbar id="footer">
+  <a href="https://bspc.org/foodpantry/" target="_blank">Pantry Information</a>
+  <a href="https://bspc.org/privacy-policy/" target="_blank">Privacy Policy</a>
 </mat-toolbar>
