--- a/src/app/components/product/product.component.css
+++ b/src/app/components/product/product.component.css
@@ -22,8 +22,7 @@
   font-size: 1rem;
 }
 .mat-card {
-  /* background: #71A040; */
-  background: #90643f;
+  background: #71A040;
   border: solid black 1px;
   margin-top: 1em;
   margin-bottom: 1em;
