--- a/src/app/components/update-modal/update-modal.component.html
+++ b/src/app/components/update-modal/update-modal.component.html
@@ -53,7 +53,7 @@
     <br>  
     <mat-form-field>
       <mat-label>Family Size</mat-label>
-      <mat-select formControlName="familySize" [(value)]="family.familySize">
+      <mat-select formControlName="familySize" [value]="family.familySize">
         <mat-option [value]=1>1</mat-option>
         <mat-option [value]=2>2</mat-option>
         <mat-option [value]=3>3</mat-option>
