--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -7,6 +7,7 @@
   height: auto;
   display: grid;
   grid-template-columns: 10% 70% 10% 10%;
+  min-width: 1020px;
 }
 a, p {
   color: rgb(65, 63, 63);
