--- a/src/app/components/sub-type-product/sub-type-product.component.html
+++ b/src/app/components/sub-type-product/sub-type-product.component.html
@@ -1,22 +1,20 @@
-<!-- <div class="product-name">
-    
-    <div *ngIf="!atTypeLimit" class="type-limit-container">
-        <div>{{typeName + ' Limit: ' + typeLimit}}</div>
-     
-    </div>
-    <div *ngIf="atTypeLimit" class="type-limit-container">
-        <div>Limit Reached</div>
-
-    </div>
-</div> -->
-<!-- <div class="type-container">
-    <div class="type-name">{{typeName}}</div>
-    <div class="type-limit">{{'Limit ' + typeLimit}}</div>
-</div> -->
-<mat-expansion-panel>
+<mat-expansion-panel 
+    (clickOutside)="panelOpenState = false"
+    (opened)="panelOpenState = true" 
+    (closed)="panelOpenState = false" 
+    [expanded]="panelOpenState"
+>
     <mat-expansion-panel-header>{{typeName}}</mat-expansion-panel-header>
-    <div class="type-info"><div>Limit:</div><div>{{typeLimit}}</div></div>
-    <div class="type-info"><div>In Cart:</div><div>{{typeAmountInCart}}</div></div>
+    <div *ngIf="panelOpenState" class="info-container">
+        <div class="icon-container">
+            <mat-icon class="icon-badge" [matBadge]="typeLimit">add_box</mat-icon>
+            <div>Limit</div>
+        </div>
+        <div class="icon-container">
+            <mat-icon class="badge-cart" [matBadge]="typeAmountInCart">shopping_cart</mat-icon>
+            <div>In Cart</div>
+        </div>
+    </div>    
 </mat-expansion-panel>
  <mat-card>
     <div class="product-name">{{product.productName}}</div>
@@ -47,8 +45,3 @@
         </div>
     </div>
 </mat-card>   
-<!-- <div class="type-info-container">
-    <span class="type-info-sub" [style.background-color]="atTypeLimit ? 'red' : 'dodgerblue'">{{typeName + ' Limit: ' + typeLimit}}</span>
-    <span></span>
-    <span class="type-info-sub" [style.background-color]="atTypeLimit ? 'red' : 'dodgerblue'">{{typeName + ' in Cart: ' + typeAmountInCart}}</span>
-</div>   -->
