--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   z-index: 2;
-  background-color: rgba(113,58,23,1);
+  background: linear-gradient(to right, rgba(113,58,23,1), #D47B28) ;
   border-bottom: solid black 2px;
   height: auto;
   display: grid;
